[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
indoc = "2.0.5"
log = "0.4.21"
thiserror = "1.0.59"
